# rust-bootcamp

./: Cargo.toml  README.md  cliff.toml  deny.toml
.githooks/: pre-commit
.github/workflows/: build.yml
app/rcli/: Cargo.toml
app/rcli/fixtures/: ed25519.pem  ed25519_pub.pem
app/rcli/src/: utils.rs
app/rcli/src/cli/: jwt.rs  mod.rs  text.rs
app/rcli/src/process/: http_serve.rs  jwt.rs  mod.rs  text.rs
app/simple-redis/: Cargo.toml
app/simple-redis/src/backend/: mod.rs
app/simple-redis/src/cmd/: conn.rs  mod.rs  removal.rs
app/simple-redis/src/resp/: array.rs  bulk_string.rs  frame.rs  integer.rs  mod.rs  set.rs
app/simple-redis/src/respv2/: mod.rs  parser.rs
app/tcp-chat/: Cargo.toml  README.md
app/tcp-chat/src/: lib.rs  main.rs  tcp.rs
app/tcp-chat/src/domain/: message.rs  mod.rs  peer.rs
app/tcp-chat/src/handler/: mod.rs
app/url-shortener/: Cargo.toml  README.md
app/url-shortener/src/: error.rs  lib.rs  main.rs  router.rs
app/url-shortener/src/domain/: mod.rs
app/url-shortener/src/handler/: mod.rs
crm/crm/: Cargo.toml  build.rs  crm.yml
crm/crm-metadata/: Cargo.toml
crm/crm-send/: Cargo.toml
crm/crm/src/: lib.rs
crm/crm/src/abi/: mod.rs
crm/crm/src/pb/: crm.rs
crm/protos/crm/: messages.proto
crm/protos/user-stats/: messages.proto
crm/user-stat/: Cargo.toml
crm/user-stat/src/abi/: mod.rs
crm/user-stat/src/pb/: user_stats.rs
