[package]
name = "tcp-chat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
dashmap = "6.0.1"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["rt", "net", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
