[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
nanoid = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "net", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
garde = { version = "0.19.2", features = ["derive", "url"] }
axum-extra = "0.9.3"
url = "2.5.2"
